@@ -465,6 +465,8 @@ if 1:
     for k in vars: # XXX
         if isinstance(vars[k], str) and '-O2' in vars[k]:
             vars[k] = vars[k].replace('-O2', '-O4')
+        #elif isinstance(vars[k], str) and '-O3' in vars[k]:
+        #    vars[k] = vars[k].replace('-O3', '-O4')
 
 OBJC_LDFLAGS.append("-fvisibility=hidden")
 
